--- a/src/CafeDevCode.Website/Views/Category/Detail.cshtml
+++ b/src/CafeDevCode.Website/Views/Category/Detail.cshtml
@@ -1,5 +1,115 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using CafeDevCode.Logic.Queries.Interface
+@using CafeDevCode.Logic.Shared.Models
+
+@inject ICategoryQueries categoryQueries
 @{
+    if(Model.Id > 0)
+    {
+         ViewData["Title"] = $"Admin - Danh mục {Model.Title} - Cafe Dev Code";
+    }
+    else
+    {
+        ViewData["Title"] = "Admin - Quản lý danh mục - Cafe Dev Code";
+    }
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+@model CategoryDetailModel
+<div class="container-fluid px-4">
+    <h1 class="mt-4">
+        @if(Model.Id > 0)
+        {
+            <span class="card-title">Danh mục @Model.Title</span>
+        }
+        else
+        {
+            <span class="card-title">Danh mục bài viết</span>
+        }
+    </h1>
+    <ol class="breadcrumb mb-4">
+        <li class="breadcrumb-item"><a aasp-action="Index">Danh mục bài viết</a></li>
+        <li class="breadcrumb-item active">Chi tiết</li>
+    </ol>
+    <div class="card mb-4">
+        <div class="card-header">
+            <h3 class="card-title">Thông tin chung</h3>
+        </div>
+        <div class="card-body">
+            <input type="hidden" asp-for="Id"/>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="mb-2">
+                      <label class="form-label"><b>Tiêu đề:</b></label>
+                      <input class="form-control" type="text" asp-for="Title"/>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="mb-2">
+                      <label class="form-label"><b>Từ khóa:</b></label>
+                      <input class="form-control" type="email" asp-for="Keywords"/>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="mb-2">
+                        <label class="form-label"><b>Url meta:</b></label>
+                        <input class="form-control" type="text" asp-for="UrlMeta"/>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="mb-2">
+                        <label class="form-label"><b>Parent:</b></label>
+                        <div class="input-group mb-3">
+                            <input class="form-control" asp-for="ParentId"/>
+                            <span class="input-group-text btn btn-success"><i class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="col-12">
+                    <div class="mb-2">
+                      <label class="form-label"><b>Mô tả:</b></label>
+                      <textarea rows="4" class="form-control" type="text" asp-for="Description"></textarea>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    onSaveChange = () => {
+        $.ajax({
+            type: 'POST',
+            url: '@Url.Action("SaveChange")',
+            data: {
+                Id: $('#Id').val(),
+                FullName: $('#FullName').val(),
+                Phone: $('#Phone').val(),
+                Email: $('#Email').val(),
+                ShortName: $('#ShortName').val()
+            },
+            success: (res) => {
+                if (res.success === true) {
+                    $('#Id').val(res.data.id);
+                    swal({
+                        title: 'Thành công',
+                        text: res.message,
+                        icon: 'success'
+                    })
+                }
+                else {
+                    swal({
+                        title: 'Lỗi',
+                        text: res.message,
+                        icon: 'error'
+                    })
+                }
+            },
+            error: (error) => {
+
+            }
+        })
+    }
+</script>
