--- a/src/CafeDevCode.Website/Views/Category/Index.cshtml
+++ b/src/CafeDevCode.Website/Views/Category/Index.cshtml
@@ -29,8 +29,8 @@
                         <th>#</th>
                         <th>Tiêu đề</th>
                         <th>Từ khóa</th>
-                        <th>Url meta</th>
-                        <th>Tên khác</th>
+                        <th>Mô tả</th>
+                        <th>Sắp xếp</th>
                         <th>Thao tác</th>
                     </tr>
                 </thead>
@@ -42,8 +42,8 @@
                         <th>#</th>
                         <th>Tiêu đề</th>
                         <th>Từ khóa</th>
-                        <th>Url meta</th>
-                        <th>Tên khác</th>
+                        <th>Mô tả</th>
+                        <th>Sắp xếp</th>
                         <th>Thao tác</th>
                     </tr>
                 </tfoot>
