--- a/src/CafeDevCode.Website/Views/Author/Index.cshtml
+++ b/src/CafeDevCode.Website/Views/Author/Index.cshtml
@@ -28,23 +28,21 @@
                 <thead>
                     <tr>
                         <th>#</th>
-                        <th>Họ tên</th>
-                        <th>Email</th>
-                        <th>Điện thoại</th>
-                        <th>Tên khác</th>
+                        <th>Tiêu đề</th>
+                        <th>Mô tả</th>
+                        <th>Từ khóa</th>
                         <th>Thao tác</th>
                     </tr>
                 </thead>
-                <tbody id="author-list-body">
+                <tbody id="playlist-list-body">
 
                 </tbody>
                 <tfoot>
                     <tr>
                         <th>#</th>
-                        <th>Họ tên</th>
-                        <th>Email</th>
-                        <th>Điện thoại</th>
-                        <th>Tên khác</th>
+                        <th>Tiêu đề</th>
+                        <th>Mô tả</th>
+                        <th>Từ khóa</th>
                         <th>Thao tác</th>
                     </tr>
                 </tfoot>
