--- a/src/CafeDevCode.Website/Views/Category/Detail.cshtml
+++ b/src/CafeDevCode.Website/Views/Category/Detail.cshtml
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="row">
                 <div class="col-12">
                     <div class="mb-2">
                       <label class="form-label"><b>Mô tả:</b></label>
