--- a/src/CafeDevCode.Website/Views/Video/List.cshtml
+++ b/src/CafeDevCode.Website/Views/Video/List.cshtml
@@ -1,5 +1,24 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using CafeDevCode.Database.Entities
+@using CafeDevCode.Logic.Shared.Models
+@model IEnumerable<VideoSummaryModel>
+@if(Model != null &&
+    Model.Any())
+{
+    foreach(var video in Model)
+    {
+        <tr>
+            <td>@video.Id</td>
+            <td>@video.Title</td>
+            <td>@video.Summary</td>
+            <td>@video.PostDate</td>
+            <td>@video.Url</td>
+            <td>@video.Iframe</td>
+            <td>
+                <a class="btn btn-success d-inline" asp-action="Detail" asp-controller="Video" asp-route-id="@video.Id">
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+                <button class="btn btn-danger d-inline ms-2" onclick="onDelete(@video.Id)"><i class="fa-solid fa-trash-can"></i></button>
+            </td>
+        </tr>
+    }
+}     
