--- a/src/CafeDevCode.Website/Views/Author/Index.cshtml
+++ b/src/CafeDevCode.Website/Views/Author/Index.cshtml
@@ -34,7 +34,7 @@
                         <th>Thao tác</th>
                     </tr>
                 </thead>
-                <tbody id="playlist-list-body">
+                <tbody id="author-list-body">
 
                 </tbody>
                 <tfoot>
