--- a/src/CafeDevCode.Website/Views/Author/Index.cshtml
+++ b/src/CafeDevCode.Website/Views/Author/Index.cshtml
@@ -28,9 +28,10 @@
                 <thead>
                     <tr>
                         <th>#</th>
-                        <th>Tiêu đề</th>
-                        <th>Mô tả</th>
-                        <th>Từ khóa</th>
+                        <th>Họ tên</th>
+                        <th>Email</th>
+                        <th>Điện thọai</th>
+                        <th>Tên khác</th>
                         <th>Thao tác</th>
                     </tr>
                 </thead>
@@ -40,9 +41,10 @@
                 <tfoot>
                     <tr>
                         <th>#</th>
-                        <th>Tiêu đề</th>
-                        <th>Mô tả</th>
-                        <th>Từ khóa</th>
+                        <th>Họ tên</th>
+                        <th>Email</th>
+                        <th>Điện thọai</th>
+                        <th>Tên khác</th>
                         <th>Thao tác</th>
                     </tr>
                 </tfoot>
