--- a/src/CafeDevCode.Website/Views/Tag/List.cshtml
+++ b/src/CafeDevCode.Website/Views/Tag/List.cshtml
@@ -1,5 +1,22 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@using CafeDevCode.Database.Entities
+@using CafeDevCode.Logic.Shared.Models
+@model IEnumerable<TagSummaryModel>
+@if (Model != null &&
+   Model.Any())
+{
+    foreach (var tag in Model)
+    {
+        <tr>
+            <td>@tag.Id</td>
+            <td>@tag.Title</td>
+            <td>@tag.UrlMeta</td>
+            <td>@tag.Description</td>
+            <td>
+                <a class="btn btn-success d-inline" asp-action="Detail" asp-controller="Tag" asp-route-id="@tag.Id">
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+                <button class="btn btn-danger d-inline ms-2" onclick="onDelete(@tag.Id)"><i class="fa-solid fa-trash-can"></i></button>
+            </td>
+        </tr>
+    }
 }
