--- a/src/CafeDevCode.Website/Views/Partial/AdminMenuLeft.cshtml
+++ b/src/CafeDevCode.Website/Views/Partial/AdminMenuLeft.cshtml
@@ -41,7 +41,7 @@
                 <div class="sb-nav-link-icon"><i class="fa-regular fa-circle"></i></div>
                 Danh sách
             </a>
-            <a class="nav-link" href="tables.html">
+            <a class="nav-link" asp-action="Index" asp-controller="Role">
                 <div class="sb-nav-link-icon"><i class="fa-regular fa-circle"></i></div>
                 Phân quyền
             </a>
