--- a/src/CafeDevCode.Website/Views/User/AccessDenied.cshtml
+++ b/src/CafeDevCode.Website/Views/User/AccessDenied.cshtml
@@ -1,20 +1,5 @@
 ﻿@{
     ViewData["Title"] = "Admin - Từ chối truy cập - Cafe Dev Code";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="container-fluid px-4">
-    <h1 class="mt-4">Danh sách người dùng</h1>
-    <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item"><a aasp-action="Index">Người dùng</a></li>
-        <li class="breadcrumb-item active">Danh sách</li>
-    </ol>
-    <div class="card mb-4">
-        <div class="card-header">
-            <i class="fas fa-table me-1"></i>
-            Từ chối truy cập
-        </div>
-        <div class="card-body">
-            
-        </div>
-    </div>
-</div>
+
