--- a/src/CafeDevCode.Website/Views/Shared/_Layout.cshtml
+++ b/src/CafeDevCode.Website/Views/Shared/_Layout.cshtml
@@ -1,19 +1,22 @@
-﻿<!DOCTYPE html>
+﻿@using CafeDevCode.Logic.Shared.Configs
+@using Microsoft.Extensions.Options
+@inject IOptions<SiteConfig> siteConfig
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="TemplateMo">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
-    <title>Stand CSS Blog by TemplateMo</title>
-    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/CafeDevCode.Website.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/assets/css/fontawesome.css">
-    <link rel="stylesheet" href="~/assets/css/templatemo-stand-blog.css">
-    <link rel="stylesheet" href="~/assets/css/owl.css">
-    <link rel="stylesheet" href="~/css/site.css">
+    <link preload href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
+    @await RenderSectionAsync("Header", required: false)
+    <script preload src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+    <link preload rel="stylesheet" href="@(siteConfig.Value.HttpsUrl + "lib/bootstrap/dist/css/bootstrap.min.css")" />
+    <link preload rel="stylesheet" href="@(siteConfig.Value.HttpsUrl + "assets/css/fontawesome.css")"/>
+    <link preload rel="stylesheet" href="@(siteConfig.Value.HttpsUrl + "assets/css/templatemo-stand-blog.css")"/>
+    <link preload rel="stylesheet" href="@(siteConfig.Value.HttpsUrl + "assets/css/owl.css")"/>
+    <link preload rel="stylesheet" href="@(siteConfig.Value.HttpsUrl + "css/site.css")"/>
 </head>
 <body>
     <div id="preloader">
@@ -65,13 +68,13 @@
         </div>
     </footer>
 
-    <script src="~/vendor/jquery/jquery.min.js"></script>
-    <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="~/assets/js/custom.js"></script>
-    <script src="~/assets/js/owl.js"></script>
-    <script src="~/assets/js/slick.js"></script>
-    <script src="~/assets/js/isotope.js"></script>
-    <script src="~/assets/js/accordions.js"></script>
+    <script src="@(siteConfig.Value.HttpsUrl + "vendor/jquery/jquery.min.js")"></script>
+    <script src="@(siteConfig.Value.HttpsUrl + "vendor/bootstrap/js/bootstrap.bundle.min.js")"></script>
+    <script src="@(siteConfig.Value.HttpsUrl + "assets/js/custom.js")"></script>
+    <script src="@(siteConfig.Value.HttpsUrl + "assets/js/owl.js")"></script>
+    <script src="@(siteConfig.Value.HttpsUrl + "assets/js/slick.js")"></script>
+    <script src="@(siteConfig.Value.HttpsUrl + "assets/js/isotope.js")"></script>
+    <script src="@(siteConfig.Value.HttpsUrl + "assets/js/accordions.js")"></script>
 
     <script language="text/Javascript">
         cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
