--- a/src/CafeDevCode.Website/Views/Partial/AdminMenuLeft.cshtml
+++ b/src/CafeDevCode.Website/Views/Partial/AdminMenuLeft.cshtml
@@ -27,11 +27,11 @@
                 Tài nguyên
             </a>
             <div class="sb-sidenav-menu-heading">Video</div>
-            <a class="nav-link" asp-action="Index" asp-controller="Video">
+            <a class="nav-link" asp-action="Index" asp-controller="PlayList">
                 <div class="sb-nav-link-icon"><i class="fa-regular fa-circle"></i></div>
                 Danh sách phát
             </a>
-            <a class="nav-link" href="#" >
+            <a class="nav-link" asp-action="Index" asp-controller="Video">
                 <div class="sb-nav-link-icon"><i class="fa-regular fa-circle"></i></div>
                 Video
             </a>
