--- a/src/CafeDevCode.Website/Views/PlayList/Detail.cshtml
+++ b/src/CafeDevCode.Website/Views/PlayList/Detail.cshtml
@@ -43,7 +43,7 @@
                 <div class="col-md-6">
                     <div class="mb-2">
                       <label class="form-label" style="font-weight: bold;">Từ khóa:</label>
-                      <input class="form-control" type="email" asp-for="Keywords">
+                        <input class="form-control" type="text" asp-for="Keywords">
                     </div>
                 </div>
             </div>
@@ -51,13 +51,13 @@
                 <div class="col-md-6">
                     <div class="mb-2">
                       <label class="form-label" style="font-weight: bold;">Url Meta:</label>
-                      <input class="form-control" type="number" asp-for="UrlMeta">
+                        <input class="form-control" type="text" asp-for="UrlMeta">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-2">
                       <label class="form-label" style="font-weight: bold;">Thứ tự:</label>
-                      <input class="form-control" type="text" asp-for="SortIndex">
+                      <input class="form-control" type="number" asp-for="SortIndex">
                     </div>
                 </div>
             </div>
